# scans-uploader

./: .dockerignore  Cargo.toml  Dockerfile
.github/workflows/: docker.yml
src/: main.rs  slack.rs  uploader.rs
