[package]
name = "slack-uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
notify = "6.1.1"
pathdiff = "0.2.1"
reqwest = { version = "0.12.4", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
