[package]
name = "slack-uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
notify = "8.0.0"
pathdiff = "0.2.1"
reqwest = { version = "0.12.12", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
